# EDA-Tutorials

./: .gitignore  README.md  pyproject.toml
datasets/: batsman_runs.xlsx  ipl_runs.json  my_custom_batsman_runs.csv  outputs.xlsx
datasets/data_cleaning/: clinical_trials.xlsx
notebooks/: Digital_Marketing_Conversion.ipynb  EDA_(FIfa_World_Cup).ipynb  Impact_of_Covid_On_Mental_Health.ipynb  data_assesing_cleaning.ipynb  data_gathering.ipynb  eda.ipynb  export_data.ipynb
